# autotrading

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  README.md  UPSTREAM_CHANGES.md  pyproject.toml  railway-daemon.toml  railway.toml  requirements.txt
docker/: Dockerfile
frontend/: next.config.js  package-lock.json  package.json
skopaq/: __init__.py  config.py  constants.py
skopaq/agents/: sell_analyst.py
skopaq/api/: __init__.py  server.py
skopaq/blockchain/: __init__.py  gas.py  whales.py
skopaq/broker/: __init__.py  binance_auth.py  binance_client.py  binance_ws.py  client.py  crypto_symbols.py  exchange.py  models.py  paper_engine.py  rate_limiter.py  scrip_resolver.py  token_manager.py  websocket.py
skopaq/cli/: __init__.py  display.py  main.py  theme.py
skopaq/db/: __init__.py  client.py  models.py  repositories.py
skopaq/execution/: __init__.py  daemon.py  executor.py  order_router.py  position_monitor.py  safety_checker.py
skopaq/graph/: __init__.py  skopaq_graph.py
skopaq/llm/: __init__.py  cache.py  env_bridge.py  model_tier.py
skopaq/memory/: __init__.py  lifecycle.py  store.py
skopaq/risk/: __init__.py  atr.py  calendar.py  concentration.py  drawdown.py  position_sizer.py  regime.py
skopaq/scanner/: __init__.py  engine.py  models.py  screen.py  watchlist.py
supabase/: config.toml
supabase/migrations/: 001_initial.sql  002_agent_memories.sql
tests/: conftest.py
tests/integration/: test_binance_live.py  test_crypto_data_apis.py  test_indstocks.py  test_langcache_live.py  test_llm_connectivity.py  test_scanner_e2e.py  test_scanner_multimodel.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/dataflows/: crypto_defi.py  crypto_funding.py  crypto_onchain.py  indstocks.py  interface.py
tradingagents/graph/: conditional_logic.py  propagation.py  reflection.py  setup.py  (+1 more)
(+49 files in other folders)
