[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skopaqtrader"
version = "0.1.0"
description = "AI algorithmic trading platform for Indian equities — built on TradingAgents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Upstream TradingAgents deps ---
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "chainlit>=2.5.5",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    # --- Skopaq additions ---
    "httpx>=0.28.0",
    "websockets>=13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=44.0.0",
    "apscheduler>=3.10.0",
    "supabase>=2.11.0",
    "upstash-redis>=1.1.0",
    "langcache>=0.11.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[project.scripts]
tradingagents = "cli.main:app"
skopaq = "skopaq.cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "skopaq*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
